<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/Child"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/Answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="sample"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/switch_c" />

        <Switch
            android:id="@+id/switch_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/switch_s" />

        <Button
            android:id="@+id/button_c"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="2px"
            android:layout_weight="1"
            android:background="@drawable/ttbutton_a"
            android:text="@string/button_c" />

        <Button
            android:id="@+id/button_f"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="2px"
            android:layout_weight="1"
            android:background="@drawable/ttbutton"
            android:text="@string/button_f"
            android:textColor="#FFFFFFFF" />
    </LinearLayout>

    <EditText
        android:id="@+id/Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textSize="18sp"
        android:text="sample" />

</LinearLayout>